# ovis_fork

ldms/src/sampler/rabbit_nvme/: Makefile.am  Plugin_rabbit_nvme.man  rabbit_nvme.c
ldms/src/sampler/rabbit_switchtec/: Makefile.am  Plugin_rabbit_switchtec.man  rabbit_switchtec.c
